implemented tab_releases APIs
