# swagger.yaml
@@ -514,105 +514,3 @@ paths:
                     type: string
                   avatar_url:
                     type: string
-  /signup:
-   post:
-      summary: "Signup"
-      operationId: "signup"
-      consumes:
-        - application/json
-      parameters:
-       - in: body
-         name: user
-         description: The user to create.
-         schema:
-          type: object
-          required:
-            - username
-            - password
-            - question
-            - answer
-          properties:
-            username:
-              type: string
-            password:
-              type: string
-            question:
-              type: integer
-            answer:
-              type: string
-      responses:
-        "200":
-          description: "successful"
-          schema:
-                type: object
-                properties:
-                  id:
-                    type: integer
-                  token:
-                    type: string
-  /login:
-   post:
-      summary: "Login"
-      operationId: "login"
-      consumes:
-        - application/json
-      parameters:
-       - in: body
-         name: user
-         description: Login.
-         schema:
-          type: object
-          required:
-            - username
-            - password
-          properties:
-            username:
-              type: string
-            password:
-              type: string
-      responses:
-        "200":
-          description: "successful"
-          schema:
-                type: object
-                properties:
-                  id:
-                    type: integer
-                  token:
-                    type: string
-  /reset_password:
-   post:
-      summary: "Reset password"
-      operationId: "reset_password"
-      consumes:
-        - application/json
-      parameters:
-       - in: body
-         name: user
-         description: Reset password.
-         schema:
-          type: object
-          required:
-            - username
-            - password
-            - question
-            - answer
-          properties:
-            username:
-              type: string
-            password:
-              type: string
-            question:
-              type: integer
-            answer:
-              type: string
-      responses:
-        "200":
-          description: "successful"
-          schema:
-                type: object
-                properties:
-                  id:
-                    type: integer
-                  token:
-                    type: string
